Added renamehome command, Using now ormlite for database, Restructure Database & Cache, Update to 1.21